# SemiconProcess

./: README.md
source/: CMakeLists.txt  env.sh
source/etching_simulation/: CMakeLists.txt  main.py  settings.py
source/etching_simulation/data/: reactive_particle_process_table.csv
source/etching_simulation/macros/: basic_etch.mac  mkopengl.mac  openGLVis.mac  straight_etch.mac  test.mac
source/etching_simulation/module/parameterisation/: CMakeLists.txt  G4PhantomParameterisation.hh  PhantomParameterisationColour.cc  PhantomParameterisationColour.hh  pyG4PVParameterised.cc  pyG4PhantomParameterisation.cc  pyG4VPVParameterisation.cc  pyPhantomParameterisationColour.cc  pymodG4parameterised.cc
source/etching_simulation/module/semiconprocess/: CMakeLists.txt  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  pymodSemiconProcess.cc
source/etching_simulation/src/: DeviceConstruction.py  SteppingAction.py  VoxelDensityChanger.py  material_utils.py
source/etching_simulation/tool/: make_wafer_phantom.py  make_wafer_phantom_10.py  make_wafer_phantom_100.py
